# projetoProgramacao2

./: .gitignore  CMakeLists.txt
include/: AnalisadorDeDados.h  ArmazenamentoDeArquivos.h  DadoSimulador.h  Elemento.h  Gerenciador.h  InterfaceDeUsuario.h  ListaEncadeada.h  Temperatura.h  Utils.h
src/: AnalisadorDeDados.cpp  ArmazenamentoDeArquivos.cpp  DadoSimulador.cpp  DadoSimulador.h  Elemento.cpp  Elemento.h  Gerenciador.cpp  InterfaceDeUsuario.cpp  ListaEncadeada.cpp  Temperatura.cpp  Temperatura.h  TrabalhoTemperatura.cpp  Utils.cpp  listaEstatica.cpp  listaEstatica.h
